# SmartSocket

./: .gitignore  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  lvgl_demo_ui.c  spi_lcd_touch_example_main.c
main/components/relay_control_ui/: master_button_ui.c  master_button_ui.h  relay_control_ui.c  relay_control_ui.h  relay_hardware.c  relay_hardware.h
main/components/wifi_ota/: http_server.c  http_server.h  wifi_ota.c  wifi_ota.h
main/web/: index.html
